[package]
name = "pi-rust-client"
version = "0.1.0"
edition = "2021"
description = "Rust RPC client for Pi coding agent"
authors = ["Your Name <you@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "pi-client"
path = "src/main.rs"